--- a/menu_1.html
+++ b/menu_1.html
@@ -30,7 +30,7 @@
                         </label>
                     </div>
                 </div>
-                <article>
+                <article class="entres">
                     <h2>Entrées</h2>
                     <div class="border_green"></div>
                     <div class="element">
@@ -69,7 +69,7 @@
                             <label for="checkbox3" class="selection"><i class="fa-solid fa-circle-check"></i></label>
                     </div>
                 </article>
-                <article>
+                <article class="plats">
                     <h2>Plats</h2>
                     <div class="border_green"></div>
                     <div class="element">
@@ -108,7 +108,7 @@
                         </div>
     
                 </article>
-                <article>
+                <article class="desserts">
                     <h2>Desserts</h2>
               
                     <div class="border_green"></div>
@@ -165,7 +165,7 @@
                 <a>Devenir partenaire</a>
             </div>
             <a>Mentions légales</a>
-            <a>Contact</a>
+            <a href="mailto:contact@ohmyfood.com">Contact</a>
         </footer>
     </main>
 </body>
