--- a/menu_3.html
+++ b/menu_3.html
@@ -164,7 +164,7 @@
                 <a>Devenir partenaire</a>
             </div>
             <a>Mentions légales</a>
-            <a>Contact</a>
+            <a href="mailto:contact@ohmyfood.com">Contact</a>
         </footer>
     </main>
 </body>
