--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>Oh my food</title>
 </head>
 <body>
+    <div class="loading-container">
+        <div class="loading"></div>
+    </div>
     <div class="container">
         <header>
             <img src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
@@ -142,11 +145,10 @@
                     <a>Devenir partenaire</a>
                 </div>
                 <a>Mentions légales</a>
-                <a>Contact</a>
+                <a href="mailto:contact@ohmyfood.com">Contact</a>
                 </article>
             </footer>
         </main>
-
     </div> 
 </body>
 </html>
