--- a/menu_2.html
+++ b/menu_2.html
@@ -174,7 +174,7 @@
                 <a>Devenir partenaire</a>
             </div>
             <a>Mentions légales</a>
-            <a>Contact</a>
+            <a href="mailto:contact@ohmyfood.com">Contact</a>
         </footer>
     </main>
 </body>
