--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Oh my food</title>
 </head>
 <body>
@@ -19,136 +19,135 @@
         <header>
             <img src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
         </header>
-        <article class="bar_location">
+        <div class="bar_location">
             <i class="fa-solid fa-location-dot"></i>
             <p>Paris, Belleville</p>
-        </article>
+        </div>
         <main>
-            <article class="title">
+            <div class="title">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
                 <button>Explorer nos restaurants</button>
-            </article>
+            </div>
             <section class="function">
-                <h2>Fonctionnement</h2>          
+                <h2>Fonctionnement</h2>
                 <div class="bar_button">
-                    <article> 
+                    <div class="block">
                         <div class="number">1</div>
-                        <i class="grey fa-solid fa-mobile-screen"></i> 
+                        <i class="grey fa-solid fa-mobile-screen"></i>
                         <p>Choisissez un restaurant</p>
-                    </article>
-                    <article> 
+                    </div>
+                    <div class="block">
                         <div class="number">2</div>
-                        <i class="grey fa-solid fa-list-ul"></i> 
+                        <i class="grey fa-solid fa-list-ul"></i>
                         <p> Composez votre menu</p>
-                    </article>
-                    <article> 
+                    </div>
+                    <div class="block">
                         <div class="number">3</div>
                         <i class="purple fa-solid fa-store"></i>
                         <p>Dégustez au restaurant</p>
-                    </article>
+                    </div>
                 </div>
             </section>
             <section>
-            <h2>Restaurants</h2>
-            <div class="restaurant">
-                <div class="card">
-                    <a href="./menu_1.html">
-                    <article>
-                        <div class="tag">Nouveau</div>
-                    </article>
-                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                    <div class="card_description">
-                        <div>
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        </div>
+                <h2>Restaurants</h2>
+                <div class="restaurant">
+                    <div class="card">
+                        <a href="./menu_1.html">
+                            <div>
+                                <div class="tag">Nouveau</div>
+                            </div>
+                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <div class="card_description">
+                                <div>
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                        </a>
                         <div class="heart">
                             <input type="checkbox" id="heart-checkbox-1">
-                            <label for="heart-checkbox">
-                                <i class="fa-regular fa-heart"></i> 
-                                <i class="gradient-text fa-solid fa-heart"></i> 
+                            <label for="heart-checkbox-1">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="gradient-text fa-solid fa-heart"></i>
                             </label>
                         </div>
-                    </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./menu_2.html">
-                    <article>
-                    <div class="tag">Nouveau</div>
-                    </article>
-                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-                    <div class="card_description">
-                        <div>
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
                         </div>
+                    </div>
+                    <div class="card">
+                        <a href="./menu_2.html">
+                            <div>
+                                <div class="tag">Nouveau</div>
+                            </div>
+                            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                            <div class="card_description">
+                                <div>
+                                    <h3>La note enchantée</h3>
+                                    <p>Charonne</p>
+                                </div>  
+                        </a>
                         <div class="heart">
                             <input type="checkbox" id="heart-checkbox-2">
-                            <label for="heart-checkbox">
-                                <i class="fa-regular fa-heart"></i> 
-                                <i class="gradient-text fa-solid fa-heart"></i> 
+                            <label for="heart-checkbox-2">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="gradient-text fa-solid fa-heart"></i>
                             </label>
                         </div>
-                    </div>
-                    </a>
-                </div>
-              
-                <div class="card">
-                    <a href="./menu_3.html">
-                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-                    <div class="card_description">
-                        <div>
-                        <h3>À la francaise</h3>
-                        <p>Cité Rouge</p>
                         </div>
+                    </div>
+                    <div class="card">
+                        <a href="./menu_3.html">
+                            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                            <div class="card_description">
+                                <div>
+                                    <h3>À la francaise</h3>
+                                    <p>Cité Rouge</p>
+                                </div>
+                        </a>
                         <div class="heart">
                             <input type="checkbox" id="heart-checkbox-3">
-                            <label for="heart-checkbox">
-                                <i class="fa-regular fa-heart"></i> 
-                                <i class="gradient-text fa-solid fa-heart"></i> 
+                            <label for="heart-checkbox-3">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="gradient-text fa-solid fa-heart"></i>
                             </label>
                         </div>
+                         </div>
                     </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./menu_4.html">
-                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-                    <div class="card_description">
-                        <div>
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
-                        </div>
+                    <div class="card">
+                        <a href="./menu_4.html">
+                            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                            <div class="card_description">
+                                <div>
+                                    <h3>Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                        </a>
                         <div class="heart">
                             <input type="checkbox" id="heart-checkbox-4">
-                            <label for="heart-checkbox">
-                                <i class="fa-regular fa-heart"></i> 
-                                <i class="gradient-text fa-solid fa-heart"></i> 
+                            <label for="heart-checkbox-4">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="gradient-text fa-solid fa-heart"></i>
                             </label>
                         </div>
+                        </div>
                     </div>
-                </a>
                 </div>
-            </div>
             </section>
             <footer>
                 <h3>ohmyfood</h3>
-                <article>
                 <div>
-                    <i class="fa-solid fa-utensils"></i>
-                    <a>Proposer un restaurant</a>
+                    <div>
+                        <i class="fa-solid fa-utensils"></i>
+                        <a>Proposer un restaurant</a>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-handshake-angle"></i>
+                        <a>Devenir partenaire</a>
+                    </div>
+                    <a>Mentions légales</a>
+                    <a href="mailto:contact@ohmyfood.com">Contact</a>
                 </div>
-                <div>
-                    <i class="fa-solid fa-handshake-angle"></i>
-                    <a>Devenir partenaire</a>
-                </div>
-                <a>Mentions légales</a>
-                <a href="mailto:contact@ohmyfood.com">Contact</a>
-                </article>
             </footer>
         </main>
-    </div> 
+    </div>
 </body>
 </html>
