--- a/menu_2.html
+++ b/menu_2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Menu La note enchantée</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                         </label>
                     </div>
                 </div>
-                <article>
+                <div>
                     <h2>Entrées</h2>
                     <div class="border_green"></div>
                     <div class="element">
@@ -79,8 +79,9 @@
                             <input type="checkbox" id="checkbox4">
                             <label for="checkbox4" class="selection"><i class="fa-solid fa-circle-check"></i></label>
                     </div>
-                </article>
-                <article>
+                    </div>
+                </div>
+                <div>
                     <h2>Plats</h2>
                     <div class="border_green"></div>
                     <div class="element">
@@ -117,11 +118,10 @@
                             <input type="checkbox" id="checkbox7">
                             <label for="checkbox7" class="selection"><i class="fa-solid fa-circle-check"></i></label>
                         </div>
-    
-                </article>
-                <article>
+                    </div>
+                </div>
+                <div>
                     <h2>Desserts</h2>
-              
                     <div class="border_green"></div>
                     <div class="element">
                         <div class="check">
@@ -157,10 +157,11 @@
                             <input type="checkbox" id="checkbox10">
                             <label for="checkbox10" class="selection"><i class="fa-solid fa-circle-check"></i></label>
                         </div>
-                </article>
-                <section class="section_button">
+                </div>
+                <div class="section_button">
                     <button>Commander</button>
-                </section>
+                </div>
+            </div>
             </div>
         </section>
         <footer>
