checker menu_4.html

--- a/menu_4.html
+++ b/menu_4.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Menu Le délice des sens</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                         </label>
                     </div>
                 </div>
-                <article>
+                <div>
                     <h2>Entrées</h2>
                     <div class="border_green"></div>
                     <div class="element">
@@ -68,8 +68,9 @@
                             <input type="checkbox" id="checkbox3">
                             <label for="checkbox3" class="selection"><i class="fa-solid fa-circle-check"></i></label>
                     </div>
-                </article>
-                <article>
+                </div>
+                </div>
+                <div>
                     <h2>Plats</h2>
                     <div class="border_green"></div>
                     <div class="element">
@@ -106,9 +107,9 @@
                             <input type="checkbox" id="checkbox6">
                             <label for="checkbox6" class="selection"><i class="fa-solid fa-circle-check"></i></label>
                         </div>
-    
-                </article>
-                <article>
+                    </div>
+                </div>
+                <div>
                     <h2>Desserts</h2>
               
                     <div class="border_green"></div>
@@ -146,11 +147,12 @@
                             <input type="checkbox" id="checkbox9">
                             <label for="checkbox9" class="selection"><i class="fa-solid fa-circle-check"></i></label>
                         </div>
-                </article>
-                <section class="section_button">
+                </div>
+                <div class="section_button">
                     <button>Commander</button>
-                </section>
+                </div>
             </div>
+        </div>
         </section>
         <footer>
             <h3>ohmyfood</h3>
